removed authenticate module from root ctrl... added angular toast

--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -111,6 +111,20 @@
     <script src="../application/landing/controllers/landingController.js" type="text/javascript"></script>
     <!-- Client Scripts -->
 
+    <!-- Notification -->
+    <script type="text/ng-template" id="toast-template.html">
+        <md-toast style="background-color:{{primary_hue_normal.value}};">
+            <span class="md-toast-text" flex>{{toastMessage}}</span>
+            <md-button ng-show="action" ng-click="null">
+            More info
+            </md-button>
+            <md-button ng-click="closeToast()">
+            Close
+            </md-button>
+        </md-toast>
+    </script>
+    <!-- Notification -->
+
     <!-- sripts -->
 
 
