--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -93,8 +93,6 @@
     <!-- Vendors -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="vendors/underscore-min.js" type="text/javascript"></script>
-    <script src="vendors/image-processing/ng-file-upload-shim-min.js" type="text/javascript"></script>
-    <script src="vendors/image-processing/ng-file-upload-min.js" type="text/javascript"></script>
     <!-- Vendors -->
 
     <!-- Client Bootstrap -->
@@ -110,6 +108,11 @@
     <script src="../application/directives/palette.js" type="text/javascript"></script>
     <script src="../application/landing/controllers/landingController.js" type="text/javascript"></script>
     <!-- Client Scripts -->
+
+    <!-- Image upload script -->
+    <script src="vendors/image-processing/ng-file-upload-shim.min.js" type="text/javascript"></script>
+    <script src="vendors/image-processing/ng-file-upload.min.js" type="text/javascript"></script>
+    <!-- Image upload script -->
 
     <!-- Notification -->
     <script type="text/ng-template" id="toast-template.html">
