--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -17,4 +17,7 @@
 	.lightweight-md-dropdown md-select:not([disabled]):focus .md-select-value {border-bottom-color: {{primary_hue_border__normal_no_opacity.value}};}
 	/* Login Form Color */
 
+	/* Header */
+	.header {background-color: {{base_hue_lightest.value}};}
+
 </style>
