--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -18,6 +18,6 @@
 	/* Login Form Color */
 
 	/* Header */
-	.header {background-color: {{base_hue_lightest.value}};}
+	.header {background-color: {{base_hue_darker_lightest_opacity.value}};}
 
 </style>
