--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -19,5 +19,9 @@
 
 	/* Header */
 	.header {background-color: {{base_hue_lightest.value}};}
+	/* Header */
+
+	/* Slideshow Overlay */
+	.video-overlay {background-color: {{base_hue_darker_lightest_opacity.value}};}
 
 </style>
