--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -7,7 +7,7 @@
 	md-dialog.authentication,
 	md-tabs.login_dialog, md-tabs.signup_dialog {background: {{base_hue_lightest.value}}!important;}
 	md-tabs.login_dialog md-tabs-wrapper {display: none;}
-	md-dialog-actions.login_actions {background: {{primary_hue_normal.value}}!important;}
+	md-dialog-actions.login_actions, .bar {background: {{primary_hue_normal.value}}!important;}
 	md-dialog-actions.login_actions .md-button span, md-dialog-actions.login_actions md-icon {color: {{base_hue_lightest.value}}!important;}
 	md-input-container.lightweight-md-input:not(.md-input-invalid).md-input-focused {border-bottom-color: {{primary_hue_border__normal_no_opacity.value}};}
 	md-input-container.lightweight-md-input:not(.md-input-invalid).md-input-focused label,
