--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -21,7 +21,7 @@
 
 		<!-- Stylesheets -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/header.css">
