--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -18,7 +18,7 @@
 	/* Login Form Color */
 
 	/* Header */
-	.header {background-color: {{base_hue_lightest_lightest_opacity.value}};}
+	.header {background-color: {{base_hue_lightest.value}};}
 	/* Header */
 
 </style>
