--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -7,9 +7,9 @@
 	md-dialog.authentication,
 	md-tabs.login_dialog, md-tabs.signup_dialog {background: {{base_hue_lightest.value}}!important;}
 	md-tabs.login_dialog md-tabs-wrapper {display: none;}
-	md-open-menu-container, md-dialog-actions.login_actions, .bar {background: {{primary_hue_normal.value}}!important;}
+	.md-open-menu-container, md-dialog-actions.login_actions, .bar {background: {{primary_hue_normal.value}}!important;}
 	md-dialog-actions.login_actions .md-button span, md-dialog-actions.login_actions md-icon,
-	md-menu-bar md-menu-content button {color: {{base_hue_lightest.value}}!important;}
+	md-menu-bar md-menu-content md-button {color: {{base_hue_lightest.value}}!important;}
 	md-input-container.lightweight-md-input:not(.md-input-invalid).md-input-focused {border-bottom-color: {{primary_hue_border__normal_no_opacity.value}};}
 	md-input-container.lightweight-md-input:not(.md-input-invalid).md-input-focused label,
 	md-input-container.md-input-focused:not(.md-input-has-value) md-select .md-select-value,
