--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -59,7 +59,8 @@
 
 
     <!-- sripts -->
-
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXG0JIjeg_YRG__rFYpgER--aWJjf2xws&callback=initMap"
+  type="text/javascript"></script>
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase-auth.js"></script>
