--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -23,6 +23,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/angular-typewrite.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/header.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/slideshow.css">
@@ -84,6 +85,7 @@
     <script src="vendors/angular-route.min.js" type="text/javascript"></script>
     <script src="vendors/angular-resource.min.js" type="text/javascript"></script>
     <script src="vendors/angular-uuid.js"></script>
+    <script src="vendors/angular-typewrite.js"></script>
     <!-- Angular Material & Angular.js Libraries -->
 
     <!-- AngularFire -->
