--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -22,4 +22,12 @@
 	.header {background-color: {{base_hue_lightest.value}};}
 	/* Header */
 
+	/* Navigation Container */
+	.navigation .container md-tab-item, 
+	.navigation .container md-tabs.md-default-theme .md-tab .md-ripple-container, 
+	.navigation .container md-tabs .md-tab .md-ripple-container {color: {{primary_hue_normal.value}};}
+	.navigation .container md-tabs .md-tab.md-active {color: {{base_hue_lightest.value}};}
+	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}}; opacity: .54;}
+	/* Navigation Container */
+
 </style>
