--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -25,9 +25,16 @@
 	/* Navigation Container */
 	.navigation .container md-tab-item, 
 	.navigation .container md-tabs.md-default-theme .md-tab .md-ripple-container, 
-	.navigation .container md-tabs .md-tab .md-ripple-container {color: {{primary_hue_normal.value}};}
+	.navigation .container md-tabs .md-tab .md-ripple-container {
+		color: {{primary_hue_normal.value}};
+	}
 	.navigation .container md-tabs .md-tab.md-active {color: {{base_hue_lightest.value}};}
-	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}}; opacity: .54;}
+	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}}; opacity: .54;
+	}
+	.navigation .container md-tabs.md-default-theme md-ink-bar, 
+	.navigation .container md-tabs md-ink-bar {
+		color: {{primary_hue_normal.value}}; background-color: {{primary_hue_normal.value}};
+	}
 	/* Navigation Container */
 
 </style>
