--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -28,6 +28,7 @@
 	.navigation .container md-tabs .md-tab .md-ripple-container {
 		color: {{primary_hue_normal.value}};
 	}
+	.navigation .container md-tabs md-content {background-color: transparent!important;}
 	.navigation .container md-tabs .md-tab.md-active {color: {{base_hue_lightest.value}};}
 	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}}; opacity: .54;
 	}
