--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -37,8 +37,8 @@
 		color: {{primary_hue_normal.value}}; background-color: {{primary_hue_normal.value}};
 	}
 	.navigation .navigation.item a {text-decoration: none!important;}
-	.navigation .navigation.item a h3 {color: {{base_hue_lightest.value}}!important; opacity: .54;}
-	.navigation .navigation.item a h3:hover {color: {{primary_hue_normal.value}}!important; opacity: 1;}
+	.navigation .navigation.item a p {color: {{base_hue_lightest.value}}!important; opacity: .54;}
+	.navigation .navigation.item a p:hover {color: {{primary_hue_normal.value}}!important; opacity: 1;}
 	.navigation .navigation.item {height: 48px;}
 	/* Navigation Container */
 
