--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -40,6 +40,7 @@
 	.navigation .navigation.item a p {color: {{base_hue_lightest.value}}!important; opacity: .54;}
 	.navigation .navigation.item a p:hover {color: {{primary_hue_normal.value}}!important; opacity: 1;}
 	.navigation .navigation.item {height: 48px;}
+	.navigation.social {background-color: {{base_hue_darkest.value}}; opacity: .54;}
 	/* Navigation Container */
 
 </style>
