slider home page

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -43,4 +43,8 @@
 	.navigation.social {background-color: {{base_hue_darkest.value}};}
 	/* Navigation Container */
 
+	/* index-news-carousel */
+	.index-news-post md-card.one-third {width: {{window_width/3}}px!important;}
+	/* index-news-carousel */
+
 </style>
