fix to slider component

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -44,7 +44,7 @@
 	/* Navigation Container */
 
 	/* index-news-carousel */
-	.index-news-post md-card.one-third {width: {{window_width/3}}px!important;}
+	.index-news-post.one-third {width: {{window_width/3}}px!important;}
 	/* index-news-carousel */
 
 </style>
