news post listing work

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -45,7 +45,7 @@
 
 	/* index-news-carousel */
 	.index-news-post.one-third {max-width: {{window_width/3}}px!important;}
-	.news.panel {width:{{window_width}}px!important; overflow: hidden; float: left;}
+	.news.panel {width:{{window_width}}px!important; overflow: hidden; position: absolute;}
 	/* index-news-carousel */
 
 </style>
