news panel width

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -46,7 +46,7 @@
 	/* index-news-carousel */
 	.index-news-post.one-third {max-width: {{window_width/3}}px!important;}
 	.index-news-post.full-width {max-width: {{window_width}}px!important;}
-	.news.panel {width:{{window_width}}px!important; overflow: hidden; position: absolute;}
+	.news.panel {overflow: hidden; position: absolute;}
 	/* index-news-carousel */
 
 </style>
