add appropriate width

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -44,8 +44,8 @@
 	/* Navigation Container */
 
 	/* index-news-carousel */
-	.index-news-post.one-third {max-width: {{window_width/3}}px!important;}
-	.index-news-post.full-width {max-width: {{window_width}}px!important;}
+	.index-news-post.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
+	.index-news-post.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
 	.news.panel {overflow: hidden; position: absolute;}
 	/* index-news-carousel */
 
