--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -46,7 +46,7 @@
 	/* index-news-carousel */
 	.index-news-post.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
 	.index-news-post.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
-	.news.panel {overflow: hidden; position: absolute;}
+	.news.panel {overflow: hidden; position: absolute; transition: all .5s ease-in-out;}
 	/* index-news-carousel */
 
 </style>
