--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -84,6 +84,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.4/angular-material.min.js"></script>
     <script src="vendors/angular-route.min.js" type="text/javascript"></script>
     <script src="vendors/angular-resource.min.js" type="text/javascript"></script>
+    <script src="vendor/angular-touch.min.js" type="text/javascript"></script>
     <script src="vendors/angular-uuid.js"></script>
     <script src="vendors/angular-typewrite.js"></script>
     <!-- Angular Material & Angular.js Libraries -->
