--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -43,6 +43,11 @@
 	.navigation.social {background-color: {{base_hue_darkest.value}};}
 	/* Navigation Container */
 
+	/* index-featured-services */
+	.services.container:hover .service md-icon {transform: scale(1.2); color: {{primary_hue_normal.value}};}
+	.services.container:hover md-title {color: {{primary_hue_normal.value}}!important;}
+	/* index-featured-services */
+
 	/* index-news-carousel */
 	.index-news-post.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
 	.index-news-post.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
