--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -30,15 +30,15 @@
 	}
 	.navigation .container md-tabs md-content {background-color: transparent!important;}
 	.navigation .container md-tabs .md-tab.md-active {color: {{base_hue_lightest.value}};}
-	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}}; opacity: .54;
+	.navigation .container md-tabs.md-default-theme .md-tab, .navigation .container md-tabs .md-tab {color: {{base_hue_lightest.value}};
 	}
 	.navigation .container md-tabs.md-default-theme md-ink-bar, 
 	.navigation .container md-tabs md-ink-bar {
 		color: {{primary_hue_normal.value}}; background-color: {{primary_hue_normal.value}};
 	}
 	.navigation .navigation.item a {text-decoration: none!important;}
-	.navigation .navigation.item a p {color: {{base_hue_lightest.value}}!important; opacity: .54;}
-	.navigation .navigation.item a p:hover {color: {{primary_hue_normal.value}}!important; opacity: 1;}
+	.navigation .navigation.item a p {color: {{base_hue_lightest.value}}!important;}
+	/*.navigation .navigation.item a p:hover {color: {{primary_hue_normal.value}}!important; opacity: 1;}*/
 	.navigation .navigation.item {height: 48px;}
 	.navigation.social {background-color: {{base_hue_darkest.value}};}
 	/* Navigation Container */
