--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -45,8 +45,8 @@
 
 	/* index-featured-services */
 	.services.container:hover .service md-icon {transform: scale(1.2); color: {{primary_hue_normal.value}};}
-	.services.container .service .md-title {font-size: 24px; color: {{base_hue_darkest.value}}; transition-duration: .2s; transition-timing-function: ease-in-out;}
-	.services.container:hover .service .md-title {color: {{primary_hue_normal.value}}!important;}
+	.services.container .md-title {font-size: 24px; color: {{base_hue_darkest.value}}; transition-duration: .2s; transition-timing-function: ease-in-out;}
+	.services.container:hover .md-title {color: {{primary_hue_normal.value}}!important;}
 	/* index-featured-services */
 
 	/* index-news-carousel */
