--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -154,14 +154,14 @@
     <script src="../application/directives/palette.js" type="text/javascript"></script>
     <script src="../application/global/controllers/uservault.js" type="text/javascript"></script>
     <script src="../application/landing/controllers/landingController.js" type="text/javascript"></script>
-    <script src="../application/pages/announcement/controllers/announcementController.js" type="text/javascript"></script>
+    <!-- <script src="../application/pages/announcement/controllers/announcementController.js" type="text/javascript"></script>
     <script src="../application/pages/authentication/controllers/authenticationController.js" type="text/javascript"></script>
     <script src="../application/pages/gallery/controllers/directoryController.js" type="text/javascript"></script>
     <script src="../application/pages/gallery/controllers/folderController.js" type="text/javascript"></script>
     <script src="../application/pages/info/controllers/infoController.js" type="text/javascript"></script>
     <script src="../application/pages/spotlight/controllers/spotlightController.js" type="text/javascript"></script>
     <script src="../application/pages/team/controllers/teamController.js" type="text/javascript"></script>
-    <script src="../application/pages/authentication/controllers/loginController.js" type="text/javascript"></script>
+    <script src="../application/pages/authentication/controllers/loginController.js" type="text/javascript"></script> -->
     <!-- Client Scripts -->
 
     <!-- Image upload script -->
