--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -3,12 +3,6 @@
 	md-content.page {background: {{base_hue_lightest.value}}!important;}
 
 	/* Login Form Color */
-	md-toolbar.login_toolbar,
-	md-dialog.authentication,
-	md-tabs.login_dialog, md-tabs.signup_dialog {background: {{base_hue_lightest.value}}!important;}
-	md-tabs.login_dialog md-tabs-wrapper {display: none;}
-	md-dialog-actions.login_actions {background: {{primary_hue_normal.value}}!important;}
-	md-dialog-actions.login_actions .md-button span, md-dialog-actions.login_actions md-icon {color: {{base_hue_lightest.value}}!important;}
 	.lightweight-md-dropdown md-select:not([disabled]):focus .md-select-value,
 	md-input-container.lightweight-md-input:not(.md-input-invalid).md-input-focused {border-bottom-color: {{primary_hue_border__normal_no_opacity.value}};}
 	md-input-container:not(.md-input-invalid).md-input-focused label.lightweight-md-option-label,
@@ -135,6 +129,7 @@
 
 	/* index-news-carousel */
 	.index-news-post.one-third {max-width: {{scroll_bar_aware_window_width/3}}px!important;}
+	.index-news-post.one-half {max-width: {{scroll_bar_aware_window_width/2}}px!important;}
 	.index-news-post.full-width {max-width: {{scroll_bar_aware_window_width}}px!important;}
 	.news.panel {overflow: hidden; position: absolute; transition: all .5s ease-in-out;}
 	/* index-news-carousel */
