--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -28,6 +28,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/header.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/slideshow.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/lightweight.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/text.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/cards.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/buttons.css">
