--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -57,7 +57,7 @@
         <!-- mediaVault -->
 
         <!-- userVault -->
-        <div ng-if="user" ng-include src="'application/global/dialogs/userVault.html'"></div>
+        <div ng-include src="'application/global/dialogs/userVault.html'"></div>
         <!-- userVault -->
 
         <!-- myVault -->
