--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -73,7 +73,7 @@
         <!-- userVault detail -->
 
         <!-- userVault add user -->
-        <div ng-if="user" ng-include src="'application/global/dialogs/userVaultAddUser.html'"></div>
+        <div ng-include src="'application/global/dialogs/userVaultAddUser.html'"></div>
         <!-- userVault add user -->
 
         <!-- password reset -->
