--- a/lib/client/app/application/global/dialogs/userVaultAddUser.html
+++ b/lib/client/app/application/global/dialogs/userVaultAddUser.html
@@ -11,7 +11,7 @@
         <md-card-content flex>
             <md-content class="md-padding" flex>
                 <div layout="column" layout-align="center center" layout-margin flex>
-                    <div class="full-width" layout="row" layout-align="center center" flex>
+                    <div style="width: 100%" layout="row" layout-align="center center" flex>
                         <md-card style="background: #fafafa;" flex flex-gt-sm="40">
                             <form name="signup" ng-submit="addUser(newUser)">
                                 <md-card-content>
