--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -81,7 +81,7 @@
         <md-card-content flex>
             <md-content flex>
                 <div layout="column" layout-align="center center" flex>
-                    <div layout-wrap class="full-width" layout="row" layout-align="center start" flex>
+                    <div layout-wrap style="width: 100%;" layout="row" layout-align="center start" flex>
                         <md-card style="background: #fafafa;" flex flex-gt-sm="40">
                             <form name="myvault">
                                 <md-card-header>
