adjusting login form
login form width and form field colors

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -30,7 +30,7 @@
 	md-radio-group:not([disabled]).md-primary.md-checked .md-off, md-radio-group.md-default-theme:not([disabled]) .md-primary.md-checked .md-off, 
 	md-radio-group:not([disabled]) .md-primary.md-checked .md-off, md-radio-group.md-default-theme:not([disabled]).md-primary .md-checked .md-off, 
 	md-radio-group:not([disabled]).md-primary .md-checked .md-off, md-radio-group.md-default-theme:not([disabled]) .md-primary .md-checked .md-off, 
-	md-radio-group:not([disabled]) .md-primary .md-checked .md-off {border-color: {{primary_hue_text__normal.value}};}
+	md-radio-group:not([disabled]) .md-primary .md-checked .md-off {border-color: {{primary_hue_normal.value}}!important;}
 	md-radio-button .md-on, md-radio-button .md-on,
 	md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {background-color: {{primary_hue_text__normal.value}};}
 	md-slider .md-thumb:after, md-slider .md-thumb:after {background: {{primary_hue_normal.value}}; border-color: {{primary_hue_normal.value}};}
