login form color adjustments

--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -22,7 +22,10 @@
 	md-radio-button.md-checked .md-ink-ripple, md-radio-button.md-checked .md-ink-ripple {color: {{primary_hue_text__normal.value}}!important;}
 	md-radio-group .md-checked .md-ink-ripple, md-radio-group .md-checked .md-ink-ripple {color:{{primary_hue_normal_darkest_opacity.value}};}
 	md-radio-button.md-checked .md-off, md-radio-button.md-checked .md-off,
-	md-input-container:not(.md-input-invalid).md-input-focused .md-input, md-radio-button.md-default-theme:not([disabled]).md-primary.md-checked .md-off, 
+	md-input-container.md-default-theme:not(.md-input-invalid).md-input-focused .md-input, 
+	md-input-container:not(.md-input-invalid).md-input-focused .md-input, 
+	md-input-container.md-default-theme:not(.md-input-invalid).md-input-resized .md-input, 
+	md-input-container:not(.md-input-invalid).md-input-resized .md-input, md-radio-button.md-default-theme:not([disabled]).md-primary.md-checked .md-off, 
 	md-radio-button:not([disabled]).md-primary.md-checked .md-off, md-radio-button.md-default-theme:not([disabled]) .md-primary.md-checked .md-off, 
 	md-radio-button:not([disabled]) .md-primary.md-checked .md-off, md-radio-button.md-default-theme:not([disabled]).md-primary .md-checked .md-off, 
 	md-radio-button:not([disabled]).md-primary .md-checked .md-off, md-radio-button.md-default-theme:not([disabled]) .md-primary .md-checked .md-off, 
