--- a/lib/client/app/application/global/dialogs/userVaultAddUser.html
+++ b/lib/client/app/application/global/dialogs/userVaultAddUser.html
@@ -1,5 +1,7 @@
 <style>
     md-list-item md-input-container {width: 100%;}
+    .md-default-theme .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-default-theme .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {background: {{primary_hue_normal.value}};}
+    .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}};}
 </style>
 <div class="secondary-dialog-curtain userVault" ng-show="user_vault_add_user_visible == true" ng-controller="usersController">
     <md-card class="suite-dialog md-card-base">
