password reset fix - my vault changes

--- a/lib/client/app/application/global/dialogs/passwordReset.html
+++ b/lib/client/app/application/global/dialogs/passwordReset.html
@@ -11,8 +11,8 @@
         <md-card-content flex>
             <md-content class="md-padding" flex>
                 <div layout="column" layout-align="center center" layout-margin flex>
-                    <div class="full-width" layout="row" layout-align="center center" flex>
-                        <md-card style="background: #fafafa; box-shadow: none;" flex="100" flex-gt-sm="40">
+                    <div style="width: 100%;" layout="row" layout-align="center center" flex>
+                        <md-card style="background: #fafafa; box-shadow: none;" flex="80" flex-sm="60" flex-gt-sm="40">
                             <div style="text-align: center;" flex>
                                 <img src="{{app_data.app_configs.graphic_logo_src}}" ng-cloak="true">
                             </div>
