--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -186,10 +186,9 @@
                                                 <md-tab label="My Files">
                                                     <md-content style="padding: 0;">
                                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
-                                                        <li ng-repeat="file in myFiles">{{file.filename}}</li>
                                                             <md-list class="md-dense" flex>
                                                                 <md-list-item class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; font-size: 16px;" class="md-avatar-icon fa" md-font-set="fa" md-font-icon="far fa-file-word" aria-label="docx">cloud_upload</md-icon>
+                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_upload</md-icon>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">No Files</h3>
                                                                     </div>
@@ -202,14 +201,12 @@
                                                     <md-content class="md-padding">
                                                         <div layout="column" layout-align="center stretch" flex>
                                                             <md-list class="md-dense" flex>
-                                                                <md-list class="md-dense" flex>
                                                                 <md-list-item class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; font-size: 16px;" class="md-avatar-icon fa" md-font-set="fa" md-font-icon="far fa-file-word" aria-label="docx">share</md-icon>
+                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">No Files Shared</h3>
                                                                     </div>
                                                                 </md-list-item>
-                                                            </md-list>
                                                             </md-list>
                                                         </div>
                                                     </md-content>
