update security roles

--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -50,15 +50,15 @@
 	<body ng-controller="colorController">
 
         <!-- editor -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/editor.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/editor.html'"></div>
         <!-- editor -->
 
         <!-- mediaVault -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/mediaVault.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/mediaVault.html'"></div>
         <!-- mediaVault -->
 
         <!-- userVault -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/userVault.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/userVault.html'"></div>
         <!-- userVault -->
 
         <!-- myVault -->
@@ -66,15 +66,15 @@
         <!-- myVault -->
 
         <!-- settings -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/settings.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/settings.html'"></div>
         <!-- settings -->
 
         <!-- userVault detail -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/userVaultDetail.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/userVaultDetail.html'"></div>
         <!-- userVault detail -->
 
         <!-- userVault add user -->
-        <div ng-if="user.security.roles == 'management'" ng-include src="'application/global/dialogs/userVaultAddUser.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/userVaultAddUser.html'"></div>
         <!-- userVault add user -->
 
         <!-- password reset -->
